@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed a bug in the Ruby/MySQL that caused binary content to be escaped badly and come back mangled #405 [Tobias Luetke]
+
 * Added block-style for callbacks #332 [bitsweat].
 
     Before:
